# drone_thesis_clean

./: .env.example  .gitignore  IMPORTANT_COMMANDS.txt  LICENSE  Phases.txt  README.md  config.yaml  package-lock.json  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/app/: main.py  (+9 more)
desktop/: package-lock.json  package.json
docs/: ardupilot_sitl_wsl_quickstart.md  desktop_shell.md  figure_6_6_ui_system_workflow.md  react_fastapi_phase0.md  react_fastapi_phase1.md  react_fastapi_phase2.md  system_data_flow_loop.md  thesis_path_plots.md
frontend/: index.html  package-lock.json  package.json
quad_rl/: __init__.py
runs/: scan_prod_v2_sweep_summary.json  scan_prod_v3_boundary_micro_sweep_summary.json  scan_prod_v3_finish2_sweep_summary.json  scan_prod_v3_smoothness_sweep_summary.json  scan_prod_v4_obs_patch_ablation_summary.json  scan_scale2_controlled_comparison_summary.json  scan_scale2_obs_compare_summary.json
scripts/: __init__.py  annotate_simulation_ui_figure.py  ardupilot_bridge.py  ardupilot_param_sweep.py  ardupilot_scan_gate.py  ardupilot_scan_gate_suite.py  ardupilot_scan_opt_suite.py  audit_frontend_routes.py  bless_ardupilot_defaults.py  bridge_repeat_eval.py  bridge_speed_sweep.py  eval.py  play.py  plot_drone_paths.py  plot_scan_geometry_bridge_example.py  plot_scan_geometry_figure.py  scan_gate_thresholds.py  scan_lawnmower_baseline.py  scan_paired_eval.py  scan_short_sweeps.py  start_full_linux.sh  start_full_linux_real.sh  start_full_linux_sim.sh  start_full_win.ps1  thesis_results_plots.py  train.py  verify_production_scan.py
(+823 files in other folders)
